WebApp: Restore AppId in WebAppTabHelper on tab restore.

DidFinishNavigation doesn't happen if WebApp tab is closed and than restored
(Ctrl+W, Ctrl+Shift+T)

Restore it using |restore_url| (no serialization of app_id needed).

Bug: 915034
Change-Id: I1d591ba81e28d2e1c0ec84f70421b8ccf4ccc995
Reviewed-on: https://chromium-review.googlesource.com/c/1425847
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Alan Cutter <alancutter@chromium.org>
Commit-Queue: Alexey Baskakov <loyso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#628252}
Former-commit-id: b1434a1f94a3e4f55802eb628f473f98a1e45740